--- a/Battleships/Battleships.csproj
+++ b/Battleships/Battleships.csproj
@@ -95,7 +95,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="ship %282%29.ico" />
+    <Resource Include="ship.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
