--- a/Battleships/Battleships.csproj
+++ b/Battleships/Battleships.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -86,6 +87,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -96,6 +98,12 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="ship.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CLBattleships\CLBattleships.csproj">
+      <Project>{EFAB4449-88B0-4B5E-A0D7-0533069ED1B5}</Project>
+      <Name>CLBattleships</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
