--- a/CLBattleships/CLBattleships.csproj
+++ b/CLBattleships/CLBattleships.csproj
@@ -45,6 +45,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Board.cs" />
+    <Compile Include="ComputerLogic.cs" />
+    <Compile Include="Coordinate.cs" />
     <Compile Include="Cursor.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
